feat: auth service integration (#11)
* feat: uuid integration after auth service
* feat: improved Docker image size